@@ -1,11 +1,14 @@
-
 // 2D
 import java.awt.Color;
 import java.awt.event.KeyEvent;
 import java.awt.event.KeyListener;
-import javax.swing.JPanel;
-import javax.swing.Timer;
-
+// XML
+import java.io.File;
+import java.io.IOException;
+import java.util.List;
+import java.util.Random;
+// Tools
+import java.util.Scanner;
 // 3D
 import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
@@ -24,23 +27,21 @@ import javafx.scene.transform.Rotate;
 import javafx.scene.transform.Transform;
 import javafx.stage.Stage;
 import javafx.util.Duration;
-
-// XML
-import java.io.File;
-import java.util.List;
-import javax.xml.parsers.ParserConfigurationException;
+import javax.swing.JPanel;
+import javax.swing.Timer;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
-// Tools
-import java.util.Scanner;
-import java.util.Random;
-import java.io.IOException;
+/* COMMANDS TO COMPILE AND RUN
+javac --module-path ./javafx/lib --add-modules javafx.controls,javafx.fxml Main.java
+java --module-path ./javafx/lib --add-modules javafx.controls,javafx.fxml Main
+*/
 
 @SuppressWarnings("unused")
 public class Main {
@@ -49,41 +50,43 @@ public class Main {
     static int[] cut = new int[2];
     static TOOLS_EvolutionRule evolutionRule;
 
-    public static void main(String[] args) throws ParserConfigurationException, SAXException, NumberFormatException {
+    public static void main(String[] args)
+        throws ParserConfigurationException, SAXException, NumberFormatException {
         TOOLS_ConfigLoader loader = new TOOLS_ConfigLoader();
         String filePath = loader.askForFilePath();
         if (filePath != null) {
             config(filePath);
         } else {
-            config("./configs/default.xml");
-            System.out.println("Aucun fichier sélectionné, utilisation des valeurs par défaut.");
+            config("./configs/default2D.xml");
+            System.out.println(
+                "Aucun fichier sélectionné, utilisation des valeurs par défaut."
+            );
         }
 
         int[] dimensions = grid.getDimensions();
         if (dimensions.length == 3) {
             Scanner scanner = new Scanner(System.in);
-            System.out.println(
-                    "Do you want to see a 2D cut? (yes/no): ");
+            System.out.println("Do you want to see a 2D cut? (yes/no): ");
             String response = scanner.nextLine();
             scanner.close();
 
             if (!response.equalsIgnoreCase("no")) {
-
                 run3DCutSimulation(grid, cut[1], cut[0]);
-
-            } else
-            {
+            } else {
                 run3DSimulation(grid);
             }
-
         } else if (dimensions.length == 2) {
             run2DSimulation(grid);
         }
     }
 
     private static void run2DSimulation(STRUCT_Grid_ND grid) {
-
-        GFX_GrilleGraphique Grid_2D = new GFX_GrilleGraphique(grid, grid.getDimensions()[0], grid.getDimensions()[1], 15);
+        GFX_GrilleGraphique Grid_2D = new GFX_GrilleGraphique(
+            grid,
+            grid.getDimensions()[0],
+            grid.getDimensions()[1],
+            15
+        );
 
         for (int i = 0; i < grid.getDimensions()[0]; i++) {
             for (int j = 0; j < grid.getDimensions()[1]; j++) {
@@ -94,6 +97,7 @@ public class Main {
         }
 
         class SimulationPanel extends JPanel implements KeyListener {
+
             private boolean simulationRunning = false;
 
             public SimulationPanel() {
@@ -110,12 +114,10 @@ public class Main {
             }
 
             @Override
-            public void keyPressed(KeyEvent e) {
-            }
+            public void keyPressed(KeyEvent e) {}
 
             @Override
-            public void keyReleased(KeyEvent e) {
-            }
+            public void keyReleased(KeyEvent e) {}
 
             public boolean isSimulationRunning() {
                 return simulationRunning;
@@ -127,6 +129,7 @@ public class Main {
         Grid_2D.revalidate();
 
         class GridWrapper {
+
             private STRUCT_Grid_ND grid;
             public int GENERATIONS = 0;
 
@@ -148,17 +151,20 @@ public class Main {
         Timer timer = new Timer(200, e -> {
             if (panel.isSimulationRunning()) {
                 System.out.println("GENERATIONS: " + gridWrapper.GENERATIONS);
-                gridWrapper.setGrid(run2DSimulationStep(gridWrapper.getGrid(), Grid_2D));
+                gridWrapper.setGrid(
+                    run2DSimulationStep(gridWrapper.getGrid(), Grid_2D)
+                );
                 gridWrapper.GENERATIONS++;
-
             }
         });
 
         timer.start();
-
     }
 
-    private static STRUCT_Grid_ND run2DSimulationStep(STRUCT_Grid_ND grid, GFX_GrilleGraphique Grid_2D) {
+    private static STRUCT_Grid_ND run2DSimulationStep(
+        STRUCT_Grid_ND grid,
+        GFX_GrilleGraphique Grid_2D
+    ) {
         int rows = grid.getDimensions()[0];
         int cols = grid.getDimensions()[1];
 
@@ -168,13 +174,14 @@ public class Main {
             for (int j = 0; j < cols; j++) {
                 COMPTER.setSettings(grid, i, j);
                 TOOLS_EvolutionRule.cursor = 0;
-                int result = evolutionRule.createNode(TOOLS_EvolutionRule.ParseFile()).getValue();
+                int result = evolutionRule
+                    .createNode(TOOLS_EvolutionRule.ParseFile())
+                    .getValue();
                 if (result == 1) {
                     new_grid.getCell(i, j).setCellValue(true);
                 } else {
                     new_grid.getCell(i, j).setCellValue(false);
                 }
-
             }
         }
 
@@ -191,7 +198,11 @@ public class Main {
         return new_grid;
     }
 
-    private static void run3DCutSimulation(STRUCT_Grid_ND grid, int value, int axis) {
+    private static void run3DCutSimulation(
+        STRUCT_Grid_ND grid,
+        int value,
+        int axis
+    ) {
         int[] dimensions = grid.getDimensions();
         int width, height;
 
@@ -207,7 +218,12 @@ public class Main {
             height = dimensions[1];
         }
 
-        GFX_GrilleGraphique grid2D = new GFX_GrilleGraphique(grid, width, height,12);
+        GFX_GrilleGraphique grid2D = new GFX_GrilleGraphique(
+            grid,
+            width,
+            height,
+            12
+        );
 
         // Extract and display the 2D slice
         for (int i = 0; i < width; i++) {
@@ -227,6 +243,7 @@ public class Main {
         }
 
         class SimulationPanel extends JPanel implements KeyListener {
+
             private boolean simulationRunning = false;
 
             public SimulationPanel() {
@@ -243,12 +260,10 @@ public class Main {
             }
 
             @Override
-            public void keyPressed(KeyEvent e) {
-            }
+            public void keyPressed(KeyEvent e) {}
 
             @Override
-            public void keyReleased(KeyEvent e) {
-            }
+            public void keyReleased(KeyEvent e) {}
 
             public boolean isSimulationRunning() {
                 return simulationRunning;
@@ -260,6 +275,7 @@ public class Main {
         grid2D.revalidate();
 
         class GridWrapper {
+
             private STRUCT_Grid_ND grid;
             public int GENERATIONS = 0;
 
@@ -281,7 +297,14 @@ public class Main {
         Timer timer = new Timer(200, e -> {
             if (panel.isSimulationRunning()) {
                 System.out.println("GENERATIONS: " + gridWrapper.GENERATIONS);
-                gridWrapper.setGrid(run3DSimulationStep(gridWrapper.getGrid(), grid2D, value, axis));
+                gridWrapper.setGrid(
+                    run3DSimulationStep(
+                        gridWrapper.getGrid(),
+                        grid2D,
+                        value,
+                        axis
+                    )
+                );
                 gridWrapper.GENERATIONS++;
             }
         });
@@ -289,8 +312,12 @@ public class Main {
         timer.start();
     }
 
-    private static STRUCT_Grid_ND run3DSimulationStep(STRUCT_Grid_ND grid, GFX_GrilleGraphique Grid_2D, int value,
-            int axis) {
+    private static STRUCT_Grid_ND run3DSimulationStep(
+        STRUCT_Grid_ND grid,
+        GFX_GrilleGraphique Grid_2D,
+        int value,
+        int axis
+    ) {
         int rows = grid.getDimensions()[0];
         int cols = grid.getDimensions()[1];
         int depth = grid.getDimensions()[2];
@@ -302,7 +329,9 @@ public class Main {
                 for (int z = 0; z < depth; z++) {
                     COMPTER.setSettings(grid, x, y, z);
                     TOOLS_EvolutionRule.cursor = 0;
-                    int result = evolutionRule.createNode(TOOLS_EvolutionRule.ParseFile()).getValue();
+                    int result = evolutionRule
+                        .createNode(TOOLS_EvolutionRule.ParseFile())
+                        .getValue();
                     if (result == 1) {
                         new_grid.getCell(x, y, z).setCellValue(true);
                     } else {
@@ -342,7 +371,6 @@ public class Main {
                     Grid_2D.colorierCase(i, j, Color.RED);
                 } else {
                     Grid_2D.colorierCase(i, j, Color.WHITE);
-
                 }
             }
         }
@@ -354,14 +382,17 @@ public class Main {
         Application.launch(GFX_Cube.class);
     }
 
-    public static void config(String path) throws ParserConfigurationException, SAXException {
+    public static void config(String path)
+        throws ParserConfigurationException, SAXException {
         try {
             File file = new File(path);
             DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
             DocumentBuilder db = dbf.newDocumentBuilder();
             Document document = db.parse(file);
             document.getDocumentElement().normalize();
-            System.out.println("Root Element :" + document.getDocumentElement().getNodeName());
+            System.out.println(
+                "Root Element :" + document.getDocumentElement().getNodeName()
+            );
             NodeList nList = document.getDocumentElement().getChildNodes();
 
             for (int temp = 0; temp < nList.getLength(); temp++) {
@@ -371,21 +402,31 @@ public class Main {
 
                     switch (eElement.getNodeName()) {
                         case "Dimension":
-                            System.out.println("Dimension : " + eElement.getTextContent());
+                            System.out.println(
+                                "Dimension : " + eElement.getTextContent()
+                            );
                             break;
                         case "GridSize":
-                            NodeList sizes = eElement.getElementsByTagName("Size");
+                            NodeList sizes = eElement.getElementsByTagName(
+                                "Size"
+                            );
                             System.out.print("GridSize : ");
                             int[] gridSize = new int[sizes.getLength()];
                             for (int i = 0; i < sizes.getLength(); i++) {
-                                gridSize[i] = Integer.parseInt(sizes.item(i).getTextContent());
-                                System.out.print(sizes.item(i).getTextContent() + " ");
+                                gridSize[i] = Integer.parseInt(
+                                    sizes.item(i).getTextContent()
+                                );
+                                System.out.print(
+                                    sizes.item(i).getTextContent() + " "
+                                );
                             }
                             grid = new STRUCT_Grid_ND(gridSize);
                             System.out.println();
                             break;
                         case "Cut":
-                            String[] parts = eElement.getTextContent().split(" ");
+                            String[] parts = eElement
+                                .getTextContent()
+                                .split(" ");
                             int axis = -1;
                             switch (parts[0].toLowerCase()) {
                                 case "x":
@@ -398,19 +439,38 @@ public class Main {
                                     cut[0] = 2;
                                     break;
                                 default:
-                                    throw new IllegalArgumentException("Invalid axis. Use 'x', 'y', or 'z'.");
+                                    throw new IllegalArgumentException(
+                                        "Invalid axis. Use 'x', 'y', or 'z'."
+                                    );
                             }
                             cut[1] = Integer.parseInt(parts[1]);
-                            System.out.println("Cut : " + eElement.getTextContent());
+                            System.out.println(
+                                "Cut : " + eElement.getTextContent()
+                            );
                             break;
                         case "CustomNeighborhoods":
-                            NodeList neighborhoods = eElement.getElementsByTagName("Neighborhood");
-                            for (int i = 0; i < neighborhoods.getLength(); i++) {
-                                new TOOLS_NeighborhoodParser().parseFile(neighborhoods.item(i).getTextContent());
-                                System.out.println("Neighborhood : " + neighborhoods.item(i).getTextContent());
+                            NodeList neighborhoods =
+                                eElement.getElementsByTagName("Neighborhood");
+                            for (
+                                int i = 0;
+                                i < neighborhoods.getLength();
+                                i++
+                            ) {
+                                new TOOLS_NeighborhoodParser()
+                                    .parseFile(
+                                        neighborhoods.item(i).getTextContent()
+                                    );
+                                System.out.println(
+                                    "Neighborhood : " +
+                                    neighborhoods.item(i).getTextContent()
+                                );
                             }
-                            System.out.println(new TOOLS_Neighborhoods().toString());
-                            for (int[] neighbor : TOOLS_Neighborhoods.getNeighborhoodByName("G32").getNeighbors(2, 2)) {
+                            System.out.println(
+                                new TOOLS_Neighborhoods().toString()
+                            );
+                            for (int[] neighbor : TOOLS_Neighborhoods.getNeighborhoodByName(
+                                "G32"
+                            ).getNeighbors(2, 2)) {
                                 System.out.print("[");
                                 for (int i = 0; i < neighbor.length; i++) {
                                     System.out.print(neighbor[i]);
@@ -422,23 +482,54 @@ public class Main {
                             }
                             break;
                         case "EvolutionRule":
-                            evolutionRule = new TOOLS_EvolutionRule(eElement.getTextContent(), false);
-                            System.out.println("EvolutionRule : " + eElement.getTextContent());
+                            evolutionRule = new TOOLS_EvolutionRule(
+                                eElement.getTextContent(),
+                                false
+                            );
+                            System.out.println(
+                                "EvolutionRule : " + eElement.getTextContent()
+                            );
                             break;
                         case "InitialCells":
-                            if (eElement.getElementsByTagName("Random").getLength() > 0) {
-                                NodeList k = eElement.getElementsByTagName("Random");
-                                grid.initializeCells(Integer.parseInt(k.item(0).getTextContent()));
+                            if (
+                                eElement
+                                    .getElementsByTagName("Random")
+                                    .getLength() >
+                                0
+                            ) {
+                                NodeList k = eElement.getElementsByTagName(
+                                    "Random"
+                                );
+                                grid.initializeCells(
+                                    Integer.parseInt(k.item(0).getTextContent())
+                                );
                             } else {
-                                NodeList cells = eElement.getElementsByTagName("Cell");
+                                NodeList cells = eElement.getElementsByTagName(
+                                    "Cell"
+                                );
                                 for (int i = 0; i < cells.getLength(); i++) {
-                                    String[] coordinates = cells.item(i).getTextContent().split(",");
-                                    int[] cellCoordinates = new int[coordinates.length];
-                                    for (int j = 0; j < coordinates.length; j++) {
-                                        cellCoordinates[j] = Integer.parseInt(coordinates[j].trim());
+                                    String[] coordinates = cells
+                                        .item(i)
+                                        .getTextContent()
+                                        .split(",");
+                                    int[] cellCoordinates =
+                                        new int[coordinates.length];
+                                    for (
+                                        int j = 0;
+                                        j < coordinates.length;
+                                        j++
+                                    ) {
+                                        cellCoordinates[j] = Integer.parseInt(
+                                            coordinates[j].trim()
+                                        );
                                     }
-                                    grid.getCell(cellCoordinates).setCellValue(true);
-                                    System.out.println("Cell : " + cells.item(i).getTextContent());
+                                    grid
+                                        .getCell(cellCoordinates)
+                                        .setCellValue(true);
+                                    System.out.println(
+                                        "Cell : " +
+                                        cells.item(i).getTextContent()
+                                    );
                                 }
                             }
                         default:
